STOR commit 1. newEventDialog virker inklusiv alle input checks (men update af Arrangement Table virker ikke endnu) 2. editEvent - store opdateringer, er snart færdig 3. Event.java - stor refactoring, følger nu camelCase standard for variablenavne, og har mere sigende variabel- og metodenavne. 4. Rettelse i EventDAO - createEvent() virker nu.